some fucntions working

--- a/src/app/Student/student.detail.html
+++ b/src/app/Student/student.detail.html
@@ -14,11 +14,11 @@
 				<div class="panel-block">
 					<label class="label">First Name:</label>
 						<p class="control">
-				  		<input class="input" type="text" placeholder="{{student">
+				  		<input class="input" type="text" placeholder="{{student.firstName}}" ng-model="studentDetail.student.firstName">
 						</p>
 					<label class="label">Last Name:</label>
 						<p class="control">
-				  		<input class="input is-danger" type="text" placeholder="{{student">
+				  		<input class="input" type="text" placeholder="{{student.lastName}}" ng-model="studentDetail.student.firstName">
 						</p>
 					<label class="label"><i class="fa fa-envelope-o" aria-hidden="true"></i> Email:</label>
 						<p class="control">
